@@ -21,14 +21,15 @@
                 font-size           : 1.6rem;
                 line-height         : 1.25;
                 background          : #888;
+                margin              : 0px;
             }
 
             dl
             {
                 width               : 600px;
-                margin              : 50px auto;
+                margin              : 0px auto;
                 color               : #000;
-                background          : #aaa;
+                background          : #000;
             }
 
             dl dt
@@ -38,7 +39,7 @@
                 font-weight         : bold;
                 cursor              : pointer;
                 text-decoration     : underline;
-                padding             : 10px;
+                padding             : 10px 0px;
             }
 
             dl dd
@@ -62,7 +63,7 @@
 
             dl dt.dlsldr-active
             {
-                color               : #000;
+                color               : #fff;
             }
 
             dl.hscroll {
@@ -360,7 +361,7 @@
             {
                 $( function()
                 {
-                    $( 'dl' ).dlsldr( { 'container' : { 'height' : 500 } } );
+                    $( 'dl' ).dlsldr( { 'container' : { 'height' : 400 } } );
                     $( 'dl' ).dlsldr( 'goTo', 2 );
                 } );
             } ( jQuery ) );
