@@ -80,17 +80,23 @@
                                                             // while using 'auto' the height for all
                                                             // headers is the height of the highest
                                                             // header
-                'gapSize'               : 0,                // the minimal gap between two clashing
+                'gapSize'               : 10,               // the minimal gap between two clashing
                                                             // headers
                                                             // allowed values: number >= 0
                 'clickable'             : true,             // true: clicking on a header scrolls to
                                                             // the corresponding content
                 'draggable'             : true,             // true: headers can be dragged
+                'touchdrag'             : true,
+                'snapping'              : true,
+                'snappingDistance'      : 25,
+                'centerAfterDragging'   : true,
+                'centerAfterTouchDrag'  : true,
                 'preventClickEvent'     : true,             // true: calls stopPropagation() and
                                                             // preventDefault() for the click event
                 'preventDragEvent'      : true,             // true: calls stopPropagation() and
                                                             // preventDefault() for the click and
                                                             // move events while dragging
+                'preventTouchEvent'     : false,
                 'style'                 : {}                // some styles to be initially applied
                                                             // to each header
             },
@@ -121,9 +127,15 @@
                                                             // 'max' sets all databoxes to the same
                                                             // maximum height
                 'draggable'             : true,             // true: databoxes can be dragged
+                'touchdrag'             : true,
+                'snapping'              : true,
+                'snappingDistance'      : 25,
+                'centerAfterDragging'   : true,
+                'centerAfterTouchDrag'  : true,
                 'preventDragEvent'      : true,             // true: calls stopPropagation() and
                                                             // preventDefault() for the click and
                                                             // move events while dragging
+                'preventTouchEvent'     : false,
                 'style'                 : {}                // some styles to be initially applied
                                                             // to each databox
             },
@@ -214,7 +226,22 @@
                 'initialPos'            : 0,
                 'dragged'               : false
             },
+            'touchingHeader'        :
+            {
+                'active'                : false,
+                'startEvent'            : null,
+                'initialPos'            : 0,
+                'dragged'               : false
+            },
             'draggingDatabox'       :
+            {
+                'active'                : false,
+                'startEvent'            : null,
+                'initialPos'            : 0,
+                'dragged'               : false,
+                'maxDist'               : 0
+            },
+            'touchingDatabox'       :
             {
                 'active'                : false,
                 'startEvent'            : null,
@@ -1145,6 +1172,7 @@
             = function()
         {
             var bindDraggingHandler = false;
+            var bindTouchingHandler = false;
 
             if ( settings.headers.clickable )
             {
@@ -1162,6 +1190,15 @@
                 bindDraggingHandler = true;
             }
 
+            if ( settings.headers.draggable && settings.headers.touchdrag )
+            {
+                components.$headers
+                    .unbind( 'touchstart' + _NSPC_ )
+                    .bind( 'touchstart' + _NSPC_, _startTouchHeader );
+
+                bindDraggingHandler = true;
+            }
+
             if ( settings.databoxes.draggable )
             {
                 components.$databoxes
@@ -1171,9 +1208,19 @@
                     .unbind( 'click' + _NSPC_ )
                     .bind( 'click' + _NSPC_, _clickDataboxChild );
 
-                //$( 'a' ).bind( 'click', function(e) { e.preventDefault();return false;} );
-
                 bindDraggingHandler = true;
+            }
+
+            if ( settings.databoxes.draggable && settings.databoxes.touchdrag )
+            {
+                components.$databoxes
+                    .unbind( 'touchstart' + _NSPC_ )
+                    .bind( 'touchstart' + _NSPC_, _startTouchDatabox );
+                $( '*', components.$databoxes )
+                    .unbind( 'click' + _NSPC_ )
+                    .bind( 'click' + _NSPC_, _clickDataboxChild );
+
+                bindTouchingHandler = true;
             }
 
             if ( bindDraggingHandler )
@@ -1185,6 +1232,19 @@
                 $document
                     .unbind( 'mousemove' + _UNSPC_ )
                     .bind( 'mousemove' + _UNSPC_, _documentMouseMove );
+            }
+
+            if ( bindTouchingHandler )
+            {
+                var $document = $( document );
+                $document
+                    .unbind( 'touchend' + _UNSPC_ )
+                    .unbind( 'touchcancel' + _UNSPC_ )
+                    .bind( 'touchend' + _UNSPC_, _documentTouchEnd )
+                    .bind( 'touchcancel' + _UNSPC_, _documentTouchEnd );
+                $document
+                    .unbind( 'touchmove' + _UNSPC_ )
+                    .bind( 'touchmove' + _UNSPC_, _documentTouchMove );
             }
 
             components.$container
@@ -1220,9 +1280,9 @@
 
             if ( settings.headers.preventClickEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
             }
         }; // var _clickHeader = function( e )
 
@@ -1237,9 +1297,9 @@
 
             if ( settings.databoxes.preventDragEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
              }
         }; // var _clickDatabox = function( e )
 
@@ -1254,11 +1314,31 @@
 
             if ( settings.headers.preventDragEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
             }
         }; // var _startDragHeader = function( e )
+
+
+        var _startTouchHeader
+            = function( e )
+        {
+            e.screenX = e.originalEvent.touches[0].screenX;
+            e.screenY = e.originalEvent.touches[0].screenY;
+
+            status.touchingHeader.active = true;
+            status.touchingHeader.startEvent = e;
+            status.touchingHeader.initialPos = getPos();
+            status.touchingHeader.dragged = false;
+
+            if ( settings.headers.preventTouchEvent )
+            {
+                // e.stopPropagation();
+                e.preventDefault();
+                // return false;
+            }
+        }; // var _startTouchHeader = function( e )
 
 
         var _startDragDatabox
@@ -1271,11 +1351,31 @@
 
             if ( settings.databoxes.preventDragEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
             }
         }; // var _startDragDatabox = function( e )
+
+
+        var _startTouchDatabox
+            = function( e )
+        {
+            e.screenX = e.originalEvent.touches[0].screenX;
+            e.screenY = e.originalEvent.touches[0].screenY;
+
+            status.touchingDatabox.active = true;
+            status.touchingDatabox.startEvent = e;
+            status.touchingDatabox.initialPos = getPos();
+            status.touchingDatabox.dragged = false;
+
+            if ( settings.databoxes.preventTouchEvent )
+            {
+                // e.stopPropagation();
+                e.preventDefault();
+                // return false;
+            }
+        }; // var _startTouchDatabox = function( e )
 
 
         var _documentMouseUp
@@ -1290,7 +1390,17 @@
                 {
                     preventDragEvent = true;
                 }
+
+                if ( settings.headers.centerAfterDragging )
+                {
+                    var diff = getCurrentNum( true ) - getCurrentNum();
+                    if ( 0 != diff )
+                    {
+                        goTo( getCurrentNum(), true );
+                    }
+                }
             }
+
 
             if ( status.draggingDatabox.active )
             {
@@ -1299,21 +1409,90 @@
                 {
                     preventDragEvent = true;
                 }
+
+                if ( settings.databoxes.centerAfterDragging )
+                {
+                    var diff = getCurrentNum( true ) - getCurrentNum();
+                    if ( 0 != diff )
+                    {
+                        goTo( getCurrentNum(), true );
+                    }
+                }
+
             }
 
             if ( preventDragEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
             }
 
         }; // var _documentMouseUp = function( e )
 
 
+        var _documentTouchEnd
+            = function( e )
+        {
+            var preventTouchEvent = false;
+
+            if ( status.touchingHeader.active )
+            {
+                status.touchingHeader.active = false;
+                if ( settings.headers.preventTouchEvent )
+                {
+                    preventTouchEvent = true;
+                }
+
+                if ( settings.headers.centerAfterTouchDrag )
+                {
+                    var diff = getCurrentNum( true ) - getCurrentNum();
+                    if ( 0 != diff )
+                    {
+                        goTo( getCurrentNum(), true );
+                    }
+                }
+            }
+
+
+            if ( status.touchingDatabox.active )
+            {
+                status.touchingDatabox.active = false;
+                if ( settings.databoxes.preventTouchEvent )
+                {
+                    preventTouchEvent = true;
+                }
+
+                if ( settings.databoxes.centerAfterTouchDrag )
+                {
+                    var diff = getCurrentNum( true ) - getCurrentNum();
+                    if ( 0 != diff )
+                    {
+                        goTo( getCurrentNum(), true );
+                    }
+                }
+
+            }
+
+            if ( preventTouchEvent )
+            {
+                // e.stopPropagation();
+                e.preventDefault();
+                // return false;
+            }
+
+        }; // var _documentTouchEnd = function( e )
+
+
         var _documentMouseMove
             = function( e )
         {
+            if ( 'undefined' == typeof e.screenX )
+            {
+                e.screenX = e.originalEvent.touches[0].screenX;
+                e.screenY = e.originalEvent.touches[0].screenY;
+            }
+
             var preventDragEvent = false;
 
             if ( status.draggingHeader.active )
@@ -1328,6 +1507,17 @@
                     }
                     status.draggingHeader.dragged = true;
                     stop();
+                }
+
+                if ( settings.headers.snapping )
+                {
+                    var cw = _getContainerWidth();
+                    var cw2 = cw / 2;
+                    var snapShift = ( status.draggingHeader.initialPos + delta + cw2 ) % cw - cw2;
+                    if ( Math.abs( snapShift ) <= settings.headers.snappingDistance )
+                    {
+                        delta -= snapShift;
+                    }
                 }
 
                 setPos( status.draggingHeader.initialPos + delta );
@@ -1364,6 +1554,17 @@
                     status.draggingDatabox.active = false;
                 }
 
+                if ( settings.headers.snapping )
+                {
+                    var cw = _getContainerWidth();
+                    var cw2 = cw / 2;
+                    var snapShift = ( status.draggingDatabox.initialPos + delta + cw2 ) % cw - cw2;
+                    if ( Math.abs( snapShift ) <= settings.databoxes.snappingDistance )
+                    {
+                        delta -= snapShift;
+                    }
+                }
+
 
                 setPos( status.draggingDatabox.initialPos + delta );
 
@@ -1375,12 +1576,102 @@
 
             if ( preventDragEvent )
             {
-                e.stopPropagation();
+                // e.stopPropagation();
                 e.preventDefault();
-                return false;
+                // return false;
             }
 
         }; // var _documentMouseMove = function( e )
+
+
+        var _documentTouchMove
+            = function( e )
+        {
+            e.screenX = e.originalEvent.touches[0].screenX;
+            e.screenY = e.originalEvent.touches[0].screenY;
+
+            var preventTouchEvent = false;
+
+            if ( status.touchingHeader.active )
+            {
+                var delta = status.touchingHeader.startEvent.screenX - e.screenX;
+
+                if ( 0 != delta )
+                {
+                    status.touchingHeader.dragged = true;
+                    stop();
+                }
+
+                if ( settings.headers.snapping )
+                {
+                    var cw = _getContainerWidth();
+                    var cw2 = cw / 2;
+                    var snapShift = ( status.touchingHeader.initialPos + delta + cw2 ) % cw - cw2;
+                    if ( Math.abs( snapShift ) <= settings.headers.snappingDistance )
+                    {
+                        delta -= snapShift;
+                    }
+                }
+
+                setPos( status.touchingHeader.initialPos + delta );
+
+                preventTouchEvent = true;
+            }
+
+            if ( status.touchingDatabox.active )
+            {
+                var deltaV = status.touchingDatabox.startEvent.screenY - e.screenY;
+                var delta = status.touchingDatabox.startEvent.screenX - e.screenX;
+
+                if ( 0 != delta )
+                {
+                    status.touchingDatabox.dragged = true;
+                    status.touchingDatabox.maxDist = 0;
+                    stop();
+                }
+
+                status.touchingDatabox.maxDist = Math.max(
+                    Math.abs( delta ),
+                    status.touchingDatabox.maxDist
+                );
+
+                if ( 10 < Math.abs( deltaV ) && 10 > status.touchingDatabox.maxDist )
+                {
+                    status.touchingDatabox.active = false;
+                }
+
+                if ( settings.headers.snapping )
+                {
+                    var cw = _getContainerWidth();
+                    var cw2 = cw / 2;
+                    var snapShift = ( status.touchingDatabox.initialPos + delta + cw2 ) % cw - cw2;
+                    if ( Math.abs( snapShift ) <= settings.databoxes.snappingDistance )
+                    {
+                        delta -= snapShift;
+                    }
+                }
+
+
+                setPos( status.touchingDatabox.initialPos + delta );
+
+                preventTouchEvent = true;
+            }
+
+            if ( preventTouchEvent )
+            {
+                //if ( 'function' == typeof document.selection.empty ) {
+                    //document.selection.empty();
+                //} else {
+                    window.getSelection().removeAllRanges();
+                //}
+
+
+                // e.stopPropagation();
+                e.preventDefault();
+                // return false;
+            }
+
+        }; // var _documentTouchMove = function( e )
 
         // << callbacks for events handler
         // -----------------------------------------------------------------------------------------
